# harmonized

./: .env  Cargo.toml  of2plus_bashrc  readme.md
src/: accords.rs  main.rs  notes.rs  tacts.rs
