[package]
name = "harmonized"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction    = "0.9.0"
text_io     = "0.1.9"
lazy_static = "1.4.0"
env_logger  = "0.9.0"
dotenv      = "0.15.0"
log         = "0.4.14"
regex       = "1.5.4"